--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <h1>2048 Julia's Version</h1>
+  <div class="score-panel">
   <div class="score">Score: <span id="score">0</span></div>
+  <div class="version">Julia versión: <span id="version">Bebê</span></div>
+</div>
+  
   <div class="grid" id="grid"></div>
 
 </body>
