making it responsible and playable on mobile

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
   <h1>2048 Julia's Version</h1>
   <div class="score-panel">
-  <div class="score">Score: <span id="score">0</span></div>
-  <div class="version">Julia versión: <span id="version">Bebê</span></div>
+  <div>Score: <span id="score">0</span></div>
+  <div>Julia version: <span id="version" class="version">Bebe</span></div>
+</div>
+
 </div>
   
   <div class="grid" id="grid"></div>
