adding win/lose verification

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <div>Score: <span id="score">0</span></div>
   <div>Julia version: <span id="version" class="version">Bebe</span></div>
 </div>
+<div id="end-screen" style="display: none;">
+  <div id="end-message"></div>
+  <button onclick="restartGame()">Jugar de Nuevo</button>
+</div>
+
 
 </div>
   
